# trading-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
bot/: __init__.py
bot/alerts/: __init__.py  telegram.py
bot/config/: __init__.py  settings.py
bot/core/: __init__.py  interfaces.py  types.py
bot/data/: __init__.py  birdeye.py  dexscreener.py  helius.py  jupiter.py
bot/exec/: __init__.py  jupiter.py  paper.py  senders.py  signers.py  strategy.py
bot/filters/: __init__.py  basic.py  rug_heuristics.py
bot/persist/: __init__.py  storage.py
bot/risk/: __init__.py  manager.py
bot/runner/: __init__.py  pipeline.py
configs/: dev.yaml  fetch.yaml  minimal-test.yaml  paper.yaml  prod.yaml
docs/: EMERGENCY_CARD.md  RUNBOOK.md
scripts/: run_paper.py  secret_vault.py
tests/: test_config.py  test_data_adapters.py  test_filters.py  test_jupiter_exec.py  test_paper_exec.py  test_types.py
tests/alerts/: test_telegram.py
tests/exec/: test_jupiter.py  test_jupiter_live_e2e.py  test_jupiter_tip.py  test_senders.py  test_signers.py  test_strategy.py
tests/persist/: test_storage.py
tests/risk/: test_manager.py
tests/runner/: test_pipeline.py
tests/security/: test_vault.py
