[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Solana trading bot with paper trading capabilities"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "Trading Bot Developer", email = "dev@example.com"},
]
dependencies = [
    "httpx[http2]==0.27.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "cryptography==43.*",
    "python-telegram-bot==21.*",
    "structlog==24.*",
    "tenacity==9.*",
    "aiosignal==1.*",
    "anyio==4.*",
    "prometheus-client==0.20.*",
]

[project.optional-dependencies]
live = [
    "solders==0.20.*",
    "solana==0.30.*",
    "base58==2.1.*",
    "pynacl==1.5.*",
    # Note: These packages may conflict with httpx version requirements
    # You may need to manually resolve dependencies or use a separate environment
]

[project.scripts]
solbot = "bot.runner.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cryptography.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle war nings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py313']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
